⚡️ MODIFY : front 코드 조금 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
   @tailwind components;
   @tailwind utilities;
 
+  .isActive {
+    font-weight: bold;
+    background-color: rgb(218, 217, 217);
+  }
 
 @layer base {
   :root {
