--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,21 @@
     background-color: rgb(218, 217, 217);
   }
 
+  .groupBg {
+    background-color: rgba(218, 217, 217, 0.2);
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+
+  .radius {
+    border-radius: 10px;
+  }
+
+
 @layer base {
   :root {
+    --radius: 8px; 
     --background: 0 0% 100%;
     --foreground: 224 71.4% 4.1%;
     --card: 0 0% 100%;
@@ -161,4 +174,8 @@ header {
 .header-content {
   flex-grow: 1;
   text-align: center;
+}
+
+.boder-radius {
+  border-radius: 10px;
 }
